// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiButton should render component with disabled state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: none;
}

.c1[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c1[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:focus,
.c1[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:focus *[fill^='#'],
.c1[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c1[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c1[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c1[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1 .c3 {
  visibility: visible;
}

.c1:hover {
  cursor: pointer;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: none;
}

.c6[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='primary']:focus,
.c6[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c6[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'],
.c6[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:focus,
.c6[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:focus *[fill^='#'],
.c6[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'],
.c6[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c6[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:focus,
.c6[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:focus *[fill^='#'],
.c6[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'],
.c6[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c6[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:focus,
.c6[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:focus *[fill^='#'],
.c6[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white'][data-appearance~='disabled'],
.c6[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c6[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c6[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c6[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='danger']:focus,
.c6[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c6[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'],
.c6[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c6[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='success']:focus,
.c6[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c6[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c6[data-appearance~='success'][data-appearance~='disabled'],
.c6[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c6[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c6[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 .c3 {
  visibility: visible;
}

.c6:hover {
  cursor: pointer;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c7[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c7[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c7:focus {
  outline: none;
}

.c5 {
  width: 1px;
}

.c5[data-appearance~='primary'] {
  background-color: transparent;
}

.c5[data-appearance~='secondary'] {
  background-color: #B1B5BB;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<body>
    <div>
      <div
        class="c0"
        data-focused="false"
        data-testid="multi"
      >
        <button
          class="c1 c2"
          data-appearance="primary"
          data-dimension="l"
          disabled=""
          id="1"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <span>
              one
            </span>
          </span>
        </button>
        <div
          aria-hidden="true"
          class="c5"
          data-appearance="primary"
          disabled=""
        />
        <button
          aria-expanded="false"
          class="c6 c7"
          data-appearance="primary"
          data-dimension="l"
          disabled=""
          type="button"
        >
          <span
            class="c3 c4"
          >
            <div
              class="c8"
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: none;
}

.c1[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c1[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:focus,
.c1[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:focus *[fill^='#'],
.c1[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c1[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c1[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c1[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1 .c3 {
  visibility: visible;
}

.c1:hover {
  cursor: pointer;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: none;
}

.c6[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='primary']:focus,
.c6[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c6[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'],
.c6[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:focus,
.c6[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:focus *[fill^='#'],
.c6[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'],
.c6[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c6[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:focus,
.c6[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:focus *[fill^='#'],
.c6[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'],
.c6[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c6[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:focus,
.c6[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:focus *[fill^='#'],
.c6[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white'][data-appearance~='disabled'],
.c6[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c6[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c6[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c6[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='danger']:focus,
.c6[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c6[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'],
.c6[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c6[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='success']:focus,
.c6[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c6[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c6[data-appearance~='success'][data-appearance~='disabled'],
.c6[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c6[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c6[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 .c3 {
  visibility: visible;
}

.c6:hover {
  cursor: pointer;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c7[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c7[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c7:focus {
  outline: none;
}

.c5 {
  width: 1px;
}

.c5[data-appearance~='primary'] {
  background-color: transparent;
}

.c5[data-appearance~='secondary'] {
  background-color: #B1B5BB;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
    <div
      class="c0"
      data-focused="false"
      data-testid="multi"
    >
      <button
        class="c1 c2"
        data-appearance="primary"
        data-dimension="l"
        disabled=""
        id="1"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <span>
            one
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="c5"
        data-appearance="primary"
        disabled=""
      />
      <button
        aria-expanded="false"
        class="c6 c7"
        data-appearance="primary"
        data-dimension="l"
        disabled=""
        type="button"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c8"
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiButton should render component with primary appearance 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c1[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c1[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:focus,
.c1[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:focus *[fill^='#'],
.c1[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c1[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c1[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c1[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1 .c3 {
  visibility: visible;
}

.c1:hover {
  cursor: pointer;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c6[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='primary']:focus,
.c6[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c6[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'],
.c6[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:focus,
.c6[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:focus *[fill^='#'],
.c6[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'],
.c6[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c6[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:focus,
.c6[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:focus *[fill^='#'],
.c6[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'],
.c6[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c6[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:focus,
.c6[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:focus *[fill^='#'],
.c6[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white'][data-appearance~='disabled'],
.c6[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c6[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c6[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c6[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='danger']:focus,
.c6[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c6[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'],
.c6[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c6[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='success']:focus,
.c6[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c6[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c6[data-appearance~='success'][data-appearance~='disabled'],
.c6[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c6[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c6[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 .c3 {
  visibility: visible;
}

.c6:hover {
  cursor: pointer;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c7[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c7[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c7:focus {
  outline: none;
}

.c5 {
  width: 1px;
}

.c5[data-appearance~='primary'] {
  background-color: transparent;
}

.c5[data-appearance~='secondary'] {
  background-color: #0062FF;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<body>
    <div>
      <div
        class="c0"
        data-focused="false"
        data-testid="multi"
      >
        <button
          class="c1 c2"
          data-appearance="primary"
          data-dimension="l"
          id="1"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <span>
              one
            </span>
          </span>
        </button>
        <div
          aria-hidden="true"
          class="c5"
          data-appearance="primary"
        />
        <button
          aria-expanded="false"
          class="c6 c7"
          data-appearance="primary"
          data-dimension="l"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <div
              class="c8"
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c1[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c1[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:focus,
.c1[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:focus *[fill^='#'],
.c1[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c1[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c1[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c1[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1 .c3 {
  visibility: visible;
}

.c1:hover {
  cursor: pointer;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c6[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='primary']:focus,
.c6[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c6[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'],
.c6[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:focus,
.c6[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:focus *[fill^='#'],
.c6[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'],
.c6[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c6[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:focus,
.c6[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:focus *[fill^='#'],
.c6[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'],
.c6[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c6[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:focus,
.c6[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:focus *[fill^='#'],
.c6[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white'][data-appearance~='disabled'],
.c6[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c6[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c6[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c6[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='danger']:focus,
.c6[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c6[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'],
.c6[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c6[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='success']:focus,
.c6[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c6[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c6[data-appearance~='success'][data-appearance~='disabled'],
.c6[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c6[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c6[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 .c3 {
  visibility: visible;
}

.c6:hover {
  cursor: pointer;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c7[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c7[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c7:focus {
  outline: none;
}

.c5 {
  width: 1px;
}

.c5[data-appearance~='primary'] {
  background-color: transparent;
}

.c5[data-appearance~='secondary'] {
  background-color: #0062FF;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
    <div
      class="c0"
      data-focused="false"
      data-testid="multi"
    >
      <button
        class="c1 c2"
        data-appearance="primary"
        data-dimension="l"
        id="1"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <span>
            one
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="c5"
        data-appearance="primary"
      />
      <button
        aria-expanded="false"
        class="c6 c7"
        data-appearance="primary"
        data-dimension="l"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c8"
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiButton should render component with secondary appearance 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c1[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c1[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:focus,
.c1[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:focus *[fill^='#'],
.c1[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c1[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c1[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c1[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1 .c3 {
  visibility: visible;
}

.c1:hover {
  cursor: pointer;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c6[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='primary']:focus,
.c6[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c6[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'],
.c6[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:focus,
.c6[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:focus *[fill^='#'],
.c6[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'],
.c6[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c6[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:focus,
.c6[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:focus *[fill^='#'],
.c6[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'],
.c6[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c6[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:focus,
.c6[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:focus *[fill^='#'],
.c6[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white'][data-appearance~='disabled'],
.c6[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c6[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c6[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c6[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='danger']:focus,
.c6[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c6[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'],
.c6[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c6[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='success']:focus,
.c6[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c6[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c6[data-appearance~='success'][data-appearance~='disabled'],
.c6[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c6[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c6[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 .c3 {
  visibility: visible;
}

.c6:hover {
  cursor: pointer;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c7[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c7[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c7:focus {
  outline: none;
}

.c5 {
  width: 1px;
}

.c5[data-appearance~='primary'] {
  background-color: transparent;
}

.c5[data-appearance~='secondary'] {
  background-color: #0062FF;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<body>
    <div>
      <div
        class="c0"
        data-focused="false"
        data-testid="multi"
      >
        <button
          class="c1 c2"
          data-appearance="secondary"
          data-dimension="l"
          id="1"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <span>
              one
            </span>
          </span>
        </button>
        <div
          aria-hidden="true"
          class="c5"
          data-appearance="secondary"
        />
        <button
          aria-expanded="false"
          class="c6 c7"
          data-appearance="secondary"
          data-dimension="l"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <div
              class="c8"
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c1[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c1[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:focus,
.c1[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:focus *[fill^='#'],
.c1[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c1[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c1[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c1[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c1[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1 .c3 {
  visibility: visible;
}

.c1:hover {
  cursor: pointer;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  pointer-events: all;
}

.c6[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='primary']:focus,
.c6[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c6[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'],
.c6[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c6[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:focus,
.c6[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:focus *[fill^='#'],
.c6[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c6[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'],
.c6[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c6[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c6[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:focus,
.c6[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:focus *[fill^='#'],
.c6[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c6[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'],
.c6[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c6[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c6[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:focus,
.c6[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:focus *[fill^='#'],
.c6[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c6[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='white'][data-appearance~='disabled'],
.c6[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c6[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c6[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c6[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='danger']:focus,
.c6[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c6[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'],
.c6[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c6[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c6[data-appearance~='success']:focus,
.c6[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c6[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c6[data-appearance~='success'][data-appearance~='disabled'],
.c6[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c6[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c6[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c6[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c6[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c6[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 .c3 {
  visibility: visible;
}

.c6:hover {
  cursor: pointer;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c7[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c7[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c7:focus {
  outline: none;
}

.c5 {
  width: 1px;
}

.c5[data-appearance~='primary'] {
  background-color: transparent;
}

.c5[data-appearance~='secondary'] {
  background-color: #0062FF;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
    <div
      class="c0"
      data-focused="false"
      data-testid="multi"
    >
      <button
        class="c1 c2"
        data-appearance="secondary"
        data-dimension="l"
        id="1"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <span>
            one
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="c5"
        data-appearance="secondary"
      />
      <button
        aria-expanded="false"
        class="c6 c7"
        data-appearance="secondary"
        data-dimension="l"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c8"
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
